# todolist

./: .env.example  README.md  alembic.ini  docker-compose.yml  main.py  main_cli.py  pyproject.toml
alembic/: env.py
alembic/versions/: 098c3ad3c44a_initial_migration_create_tasks_and_.py
application/: services.py
infrastructure/: repository.py
src/todolist/: config.py
src/todolist/api/: dependencies.py  schemas.py
src/todolist/api/routers/: task_router.py
src/todolist/application/: services.py
src/todolist/cli/: __init__.py  scheduler_cli.py
src/todolist/db/: __init__.py  session.py
src/todolist/domain/: __init__.py  models.py
src/todolist/infrastructure/: repository.py
src/todolist/repositories/: __init__.py  base.py  category_repository.py  task_repository.py
src/todolist/scheduler/: __init__.py  tasks.py
src/todolist/services/: task_service.py
