[project]
name = "todolist"
version = "0.2.0"
description = "ToDoList Python OOP"
authors = [
    {name = "Pooya",email = "barazandehpooya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.123.3,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "todolist", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
schedule = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
